fix: remove useless

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-URL_RPC = 'https://goerli.infura.io/v3/95936a3fcd954e49b767e82ef0574fd3'
+URL_RPC = 'https://sepolia.infura.io/v3/45ab7a24b8ab4874bb577bd367c9b5b6'
 PASSWORD = 'XIEXUENI@XBANK.PLUS'
 FROM_ADDRESS = '0x0E717C91feA1FC992776d771383Dc0E217A986f2'
 TO_ADDRESS = '0xe5c70a775A9Cbc4B217a69EA4f4efa66F7F1c8FC'
