feat: react & write contract

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ URL_RPC = 'https://sepolia.infura.io/v3/45ab7a24b8ab4874bb577bd367c9b5b6'
 PASSWORD = 'XIEXUENI@XBANK.PLUS'
 FROM_ADDRESS = '0x0E717C91feA1FC992776d771383Dc0E217A986f2'
 TO_ADDRESS = '0xe5c70a775A9Cbc4B217a69EA4f4efa66F7F1c8FC'
+SPENDER_ADDRESS = '0x078320377972780D058B3cD2BD5E813eBdF696E3'
+WETH_ADDRESS = '0x3B851d4d79C44AbBBF914D6bc61A2BdCC7387d85'
